--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "vcvcvc_bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "bot.js",
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3",
-    "dotenv": "^9.0.2"
+    "dotenv": "^9.0.2",
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.3.0"
   }
 }
