--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^9.0.2",
+    "fuse.js": "^6.4.6",
     "node-fetch": "^2.6.1",
     "prettier": "^2.3.0"
   }
